# Chatterbox-turbo-vllm

./: .gitignore  LICENSE  README.md  benchmark.py  example-tts-min-vram.py  example-tts.py  gradio_tts_app.py  pyproject.toml
src/chatterbox_vllm/: tts.py
src/chatterbox_vllm/models/s3gen/: decoder.py  flow.py  flow_matching.py  s3gen.py
src/chatterbox_vllm/models/t3/: __init__.py  t3.py
src/chatterbox_vllm/models/t3/modules/: cond_enc.py  t3_config.py
t3-model-turbo/: config.json
