[project]
name = "chatterbox-vllm"
description = "Chatterbox TTS ported to VLLM for efficienct and advanced inference tasks"
dynamic = ["version"]
license = { file = "LICENSE" }
requires-python = ">=3.10"
readme = "README.md"
authors = [
    {name = "David Li", email = "david@david-li.com"},
    {name = "resemble-ai", email = "engineering@resemble.ai"}
]
keywords = ["llm", "gpt", "cli", "tts", "chatterbox"]
dependencies = [
    "torch",
    "torchaudio",
    "setuptools<81",
    "transformers>=4.57.1,<5",
    "tokenizers>=0.22.1,<0.23",
    "huggingface-hub>=0.34.0,<1.0",
    "scipy",
    "numpy",
    "librosa",
    "s3tokenizer",
    "omegaconf",
    "conformer",
    "diffusers",
    "peft",
    "llvmlite>=0.44.0",
    "vllm==0.10.0",
    "gradio",
]

[project.optional-dependencies]
dev = ["build", "twine"]
quantization = ["bitsandbytes>=0.42.0"]
blackwell = ["torch>=2.7.1", "torchaudio>=2.7.1"]

[tool.setuptools.dynamic]
version = { file = ".latest-version.generated.txt" }

[tool.setuptools.package-data]
chatterbox_vllm = ["models/t3/*.json", "models/*/t3/*.json"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", extra = "blackwell" }]
torchaudio = [{ index = "pytorch-cu128", extra = "blackwell" }]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
"Changelog" = "https://github.com/randombk/chatterbox-vllm/blob/master/README.md"
"Source" = "https://github.com/randombk/chatterbox-vllm"
"Tracker" = "https://github.com/randombk/chatterbox-vllm/issues"
